<resources>
    <string name="app_name">Abija Expense Tracker</string>
    <string name="savings">Savings</string>
    <string name="reminder">Reminder</string>
    <string name="budget_icon">budget icon</string>
    <string name="reminder_icon">reminder icon</string>
    <string name="savings_icon">savings icon</string>
    <string name="budget">Budget</string>
    <string name="transactions">Transactions</string>
    <string name="see_all">See All</string>
    <string name="transaction_item_icon">transaction item icon</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payments_icon">payments icon</string>
    <string name="payments">Payments</string>
    <string name="add_your_goals">Add your goals</string>
    <string name="filter_your_goals">Filter your goals</string>
    <string name="categories">Categories</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="select_category_type">Select category type</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="select_category">Select Category</string>
    <string name="select_date">Select Date</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="spend">Spend</string>
    <string name="left">Left</string>
    <string name="fifty_percentage">(50%)</string>
    <string name="thirty_percentage">(30%)</string>
    <string name="twenty_percentage">(20%)</string>
    <string name="enter_the_source">Enter the source</string>
    <string name="app_center_secret_key">8a506ea0-7157-4948-9aad-2e366e342106</string>
    <string name="budget_overview">Budget Overview</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="_3_5_2_allocations">3:5:2 Allocations</string>
    <string name="search_expenses">Search Expenses</string>
    <string name="spendwise">SpendWise</string>
    <string name="_3_5_2_spending_breakdown">3:5:2. Spending Breakdown</string>
    <string name="budget_allocation">Budget Allocation</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View All</string>
    <string name="add">+ Add</string>
    <string name="total_monthly_income">Total Monthly Income</string>
    <string name="export_data">Export Data</string>
    <string name="export_all_1_expenses_and_1_income_entries_as_csv">Export all 1 expenses and 1 income entries as CSV.</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="about_spendwise">About SpendWise</string>
    <string name="spendwise_uses_the_3_5_2_budgeting_rule_50_30_20_to_help_you_manage_your_finances_50_for_needs_30_for_wants_and_20_for_savings">SpendWise uses the 3:5:2 budgeting rule (50/30/20) to help you manage your finances. 50% for Needs, 30% for Wants, and 20% for Savings.</string>
    <string name="version_1_0_0_all_data_stored_locally_on_your_device">Version 1.0.0 · All data stored locally on your device.</string>
    <string name="create_a_custom_category_to_classify_your_transactions_for_better_tracking_and_reporting">Create a custom category to classify your transactions for better tracking and reporting.</string>
    <string name="view_categories">View Categories</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="permanently_delete_all_expenses_and_income_entries_this_cannot_be_undone">Permanently delete all expenses and income entries. This cannot be undone.</string>
    <string name="add_category">Add Category</string>
    <string name="name">Name</string>
    <string name="primary_type">Primary Type</string>
    <string name="save_category">Save Category</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="note_optionel">Note(Optionel)</string>
    <string name="save_expense">Save Expense</string>
    <string name="add_income">Add Income</string>
    <string name="source">Source</string>
    <string name="save_income">Save Income</string>
    <string name="need_50">Need (50%)</string>
    <string name="on_track">On Track</string>
    <string name="_0_spent">₹0 Spent</string>
    <string name="_0_left">₹0 Left</string>
    <string name="_0">0%</string>
    <string name="recommended">Recommended</string>
    <string name="remaining">Remaining</string>
    <string name="spent">Spent</string>
    <string name="n">N</string>
    <string name="rent">Rent</string>
    <string name="mar_4">Mar 4</string>
    <string name="_0_">-₹0</string>
    <string name="__0">₹0</string>
    <string name="money_symbol">₹</string>
    <string name="over_budget">Over Budget</string>
    <string name="approaching">Approaching</string>
</resources>